<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_aria2_host" />

    <CheckBox
        android:id="@+id/aria2_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isHttps" />

    <EditText
        android:id="@+id/aria2_editText_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/aria2_editText_host"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_aria2_port" />

    <EditText
        android:id="@+id/aria2_editText_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/aria2_editText_port"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_aria2_token" />

    <EditText
        android:id="@+id/aria2_editText_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/aria2_editText_token"/>

    <Button
        android:id="@+id/aria2_button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_ok" />
</LinearLayout>
